project/stage/semantic_tests/reject/multiple_missing_return.ul
void main() {

}

int foo() {

}

void bar() {
    
}
